proyecto
Se empienza a subir el proyecto ,con ligeros fallas